--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  functional_widget_annotation: ^0.5.1
   rxdart: ^0.24.1
   flame: ^0.22.1
   flutter:
@@ -32,7 +33,8 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  build_runner: ^1.0.0
+  functional_widget: ^0.7.2
+  build_runner: ^1.9.0
   flutter_test:
     sdk: flutter
 
